Print grid in color
Using my experimental branch of rust-termbox for printing cells.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ authors = ["Gabriel Martinez <reitaka@gmail.com>"]
 [dependencies.termbox]
 
 git = "https://github.com/mystal/rust-termbox.git"
-rev = "dev"
+rev = "update"
