Update to Rust 1.2 and use rustbox
Replaced my personal fork of the termbox crate with rustbox. While
rustbox doesn't use Cells, it is better maintained and more widely
used.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,4 @@ authors = ["Gabriel Martinez <reitaka@gmail.com>"]
 [dependencies]
 
 rand = "*"
-
-[dependencies.termbox]
-
-git = "https://github.com/mystal/rust-termbox.git"
+rustbox = "*"
