--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-
 name = "rust-mines"
 version = "0.0.1"
 authors = ["Gabriel Martinez <reitaka@gmail.com>"]
 
 [dependencies]
-
-rand = "*"
-rustbox = "*"
+rand = "^0.3.15"
+rustbox = "^0.9.0"
