--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
+[workspace]
+members = ["minegrid"]
+
+[workspace.package]
+authors = ["Gabriel Martinez <reitaka@gmail.com>"]
+
 [package]
 name = "rust-mines"
 version = "0.0.1"
-authors = ["Gabriel Martinez <reitaka@gmail.com>"]
 edition = "2015"
+authors.workspace = true
 
 [dependencies]
-rand = "^0.3.15"
-rustbox = "^0.9.0"
+minegrid = { version = "0.1", path = "./minegrid" }
