--- a/minegrid/Cargo.toml
+++ b/minegrid/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "minegrid"
 version = "0.1.0"
-authors = ["Gabriel Martinez <reitaka@gmail.com>"]
 edition = "2024"
+authors.workspace = true
 
 [dependencies]
-rand = "0.5"
+rand = "0.9"
