--- a/minegrid/Cargo.toml
+++ b/minegrid/Cargo.toml
@@ -3,6 +3,7 @@ name = "minegrid"
 version = "0.1.0"
 edition = "2024"
 authors.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 rand = "0.9"
